[metadata]
name = grafana-testapi
summary = A project to generate Grafana dashboards based on yaml config
author = SerenaFeng
author-email = serena.feng.711@gmail.com
home-page = https://github.com/SerenaFeng/grafana-testapi
license = Apache-2.0
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    grafanatestapi

data_files =
#    /etc/grafanatestapi = etc/*

[entry_points]

grafanatestapi.algos =
    search = grafanatestapi.algos.search:Searcher
    criteria = grafanatestapi.algos.criteria:Criteria


[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
